[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/Buques/NaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Enemies/EnemigoSniper.png" type="Texture" id=2]
[ext_resource path="res://Juego/Weapons/NormalWeapon1Proyectil.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Enemies/EnemigoSniper.gd" type="Script" id=4]
[ext_resource path="res://Juego/Proyectiles/EnemyLaser.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 0.8

[sub_resource type="CircleShape2D" id=1]
radius = 566.636

[node name="EnemigoSniper" groups=[
"minimapa",
] instance=ExtResource( 1 )]
z_index = 5
z_as_relative = false
collision_layer = 4
collision_mask = 30
physics_material_override = SubResource( 2 )
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )
hitpoints = 10.0

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="." index="1"]
polygon = PoolVector2Array( -26.1056, -36.381, 0.218842, -44.3379, 25.8075, -35.9089, 51.2907, -2.80664, 38.7854, 41.4888, -39.3202, 42.6684, -51.9808, -3.44183 )

[node name="BarraHitPoints" parent="." index="5"]
margin_left = -70.0
margin_top = 53.0
margin_right = 0.0
margin_bottom = 63.0

[node name="NormalWeapon1Proyectil" parent="." index="6" instance=ExtResource( 3 )]
position = Vector2( 32.1734, 0 )
proyectile = ExtResource( 5 )
fire_rate = 2.5
proyectile_velocity = 1600
proyectile_damage = 6

[node name="RayCastDisparo" type="RayCast2D" parent="." index="7"]
enabled = true
cast_to = Vector2( 1500, 0 )
collision_mask = 2

[node name="AreaJugadorCerca" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaJugadorCerca" index="0"]
shape = SubResource( 1 )

[connection signal="body_entered" from="AreaJugadorCerca" to="." method="_on_AreaJugadorCerca_body_entered"]
